punto 3 mayusculas progrmaa

--- a/PreParcial7.web/src/main/webapp/src/view/cursoTemplates.html
+++ b/PreParcial7.web/src/main/webapp/src/view/cursoTemplates.html
@@ -14,6 +14,7 @@
     <tr>
 		<td><%= htmlEncode(curso.getDisplay('name')) %></td>
 		<td><%= htmlEncode(curso.getDisplay('programa')) %></td>
+                <td style="text-transform:uppercase;"><%= htmlEncode(curso.getDisplay('programa')) %></td>
     <td>
     <% if(showEdit) {%>
     <a onclick="Backbone.trigger('<%= componentId %>-curso-edit',{id:<%= curso.id %>}); return false" >Edit</a> |
