--- a/PreParcial7.web/src/main/webapp/src/view/cursoTemplates.html
+++ b/PreParcial7.web/src/main/webapp/src/view/cursoTemplates.html
@@ -13,7 +13,6 @@
     <% _.each(cursos, function(curso) { %>
     <tr>
 		<td><%= htmlEncode(curso.getDisplay('name')) %></td>
-		<td><%= htmlEncode(curso.getDisplay('programa')) %></td>
                 <td style="text-transform:uppercase;"><%= htmlEncode(curso.getDisplay('programa')) %></td>
     <td>
     <% if(showEdit) {%>
@@ -42,7 +41,7 @@
 		</div>
 		<div class="form-group" >
 		<label for="programa">Programa</label>
-    	<input type="text" class="form-control" id="programa" name="programa" placeholder="Enter value" value="<%= curso.get('programa') %>"/>	
+        <input type="text" class="form-control" style="text-transform:uppercase;" id="programa" name="programa" placeholder="Enter value" value="<%= curso.get('programa') %>"/>
 		</div>
     </form>
     </div>
